[fix]  web : table header now wrap the text

--- a/addons/web/static/src/css/theme.css
+++ b/addons/web/static/src/css/theme.css
@@ -99,7 +99,7 @@ Odoo Generics
 }
 
 .table > thead > tr > th {
-    white-space: nowrap;
+    /*white-space: nowrap;*/
 }
 
 .oe_module_desc {
